--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h4 style="color: var(--bs-form-valid-border-color);margin: 14px;margin-bottom: 0px;font-weight: 400;font-size: 27px;font-family: Cairo, sans-serif;border-color: rgb(93,180,27);">شحن شدات ببجي</h4>
         </div>
         <div class="email-login" style="background-color:#ffffff;"><input type="email" class="email-imput form-control" style="margin-top: 10px;font-family: Cairo, sans-serif;text-align: center;border-width: 3px;border-color: var(--bs-body-color);" placeholder="ادخل الايدي هنا" minlength="6" autocomplete="off"></div>
-        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg box-shadow w-100" role="button" id="myButton" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="deep.html"><div id="fsa">بدء الشحن</div></a><small class="form-text" style="font-family: Cairo, sans-serif;">الشدات المتبقية من العرض&nbsp;</small>
+        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg box-shadow w-100" role="button" id="myButton" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="dep.html"><div id="fsa">بدء الشحن</div></a><small class="form-text" style="font-family: Cairo, sans-serif;">الشدات المتبقية من العرض&nbsp;</small>
             <div class="progress" style="height: 32px;margin: 6px;">
                 <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100" style="width: 74%;">74%</div>
             </div>
