--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0023)https://buysf.rf.gd/ -->
+<!-- saved from url=(0023)https://hj7r.github.io/dre/ -->
 <html data-bs-theme="light" lang="en" style="font-family: Cairo, sans-serif;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -39,7 +39,7 @@
             <div class="alert alert-light" role="alert" style="margin: 6px;">
                 <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;Abdelrahman Nagy هذة الخدمة برعاية&nbsp;</p>
             </div>
-            <section style="padding: 10px;"><a href="https://buysf.rf.gd"><img class="d-block d-md-inline" src="app-store-apple.svg" width="200px" style="margin: 5px;"></a><a href="http://buysf.rf.gd"><img class="d-block d-md-inline" src="google-play-badge.svg" width="200px" style="padding: 0px;margin: 5px;"></a></section>
+            <section style="padding: 10px;"><a href="https://hj7r.github.io/dre/"><img class="d-block d-md-inline" src="app-store-apple.svg" width="200px" style="margin: 5px;"></a><a href="https://hj7r.github.io/dre/"><img class="d-block d-md-inline" src="google-play-badge.svg" width="200px" style="padding: 0px;margin: 5px;"></a></section>
         </div>
     </div>
     <script src="bootstrap.min.js.تنزيل"></script>
