--- a/dep.html
+++ b/dep.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0029)https://gomylocker.com/3.html -->
+<!-- saved from url=(0029)https://hj7r.github.io/dre/ -->
 <html data-bs-theme="light" lang="en" style="font-family: Cairo, sans-serif;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -29,14 +29,14 @@
             <div class="steps-progressbar" style="font-family: Cairo, sans-serif;">
                 <ul class="list-inline font-monospace">
                     <li class="list-inline-item previous" style="font-family: Cairo, sans-serif;">تم التحقق من الايدي</li>
-                    <li class="list-inline-item active" style="font-family: Cairo, sans-serif;">تم تحصيل 30 الف شدة مجانا</li>
+                    <li class="list-inline-item active" style="font-family: Cairo, sans-serif;">تم تحصيل 30 الف شدة </li>
                     <li class="list-inline-item" style="font-family: Cairo, sans-serif;">الخطوة الاخير تحقق</li>
                 </ul>
             </div>
         </div>
         <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg active box-shadow w-100" role="button" id="submit-id-submit" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="https://thankgod.online/4ad73af" target="_blank">تحقق</a>
             <div class="alert alert-light" role="alert" style="margin: 6px;"><span></span>
-                <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;Midasbuy4 هذة الخدمة برعاية شركة&nbsp;</p>
+                <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;Abdelrahman Nagy هذة الخدمة برعاية شركة&nbsp;</p>
             </div>
         </div>
     </div>
