--- a/dep.html
+++ b/dep.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
         </div>
-        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg active box-shadow w-100" role="button" id="submit-id-submit" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="https://thankgod.online/4ad73af" target="_blank">تحقق</a>
+        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg active box-shadow w-100" role="button" id="submit-id-submit" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="https://mfxu.blogspot.com/" target="_blank">تحقق</a>
             <div class="alert alert-light" role="alert" style="margin: 6px;"><span></span>
                 <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;Abdelrahman Nagy هذة الخدمة برعاية شركة&nbsp;</p>
             </div>
